--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div>
                 <div class="form">
-                    <h2>Preencha o formulário!</h2>
+                    <h2>Preencha o formulário e inicie a sua caminhada para virar um webmaster</h2>
                     <form>
                         <div class="input-container">
                             <span>Nome*</span>
